# Phoenix

./: .gitignore  CMakeLists.txt  readme.md  terrain.h3d
.cache/clangd/index/: Animation.cpp.49B4388BAD0AE758.idx  AssimpLoader.cpp.B25B504B17DD8339.idx  AssimpLoader.hpp.6E7AB909BBF8FA9A.idx  Batch.cpp.BD912FF13911480B.idx  Batch.hpp.B9EC67EDA7C09DBE.idx  Camera.cpp.A85F31E4A7FDC25F.idx  Camera.hpp.08119E4DBE3616A9.idx  Collision.cpp.0FC25D3030607923.idx  Collision.hpp.5F2327FD628B0CF8.idx  Color.cpp.CC2D0540A0757C7A.idx  Color.hpp.DDFDC39C8E1B611F.idx  Component.cpp.95EBC0502141D4BC.idx  Component.hpp.0294B060FDD08C27.idx  Components.cpp.D9CE395452B14867.idx  Components.hpp.DF86E94085D709F8.idx  Config.hpp.CFE781C6BBE21C2C.idx  Core.hpp.2720E64C2E281FCE.idx  Device.cpp.1B857DDF23909584.idx  Device.hpp.4284AAB3577BBAC4.idx  Driver.cpp.4880B4A3050FFC6A.idx  Driver.hpp.8628F12952588304.idx  Font.cpp.3FA315EA46514AE8.idx  Font.hpp.4B622F085A3B0E00.idx  (+66 more)
animation/: CMakeLists.txt
animation/src/: main.cpp
assets/: StandingWalkLeft.fbx  exporter  fish.h3d  idle.mesh  importer.py  loader.py  water.txt
assets/shaders/: basicLight.fs  effect.fs  effect.vs  screenQuad.fs  screenQuad.ps  terrain.fs  terrain.ps  water copy 2.fs  water copy 3.fs  water copy.fs  water copy.ps  water.fs  water.ps
assets/trees/: Tree3.glb
basic_ssao/: CMakeLists.txt
basic_ssao/src/: main.cpp
core/: CMakeLists.txt
core/include/: Batch.hpp  Camera.hpp  Collision.hpp  Color.hpp  Component.hpp  Components.hpp  Config.hpp  Core.hpp  Device.hpp  Driver.hpp  Effects.hpp  Font.hpp  Frustum.hpp  GUI.hpp  GameObject.hpp  GraphicsTypes.hpp  LoadTypes.hpp  Math.hpp  Mesh.hpp  Node.hpp  Node3D.hpp  Object.hpp  Pixmap.hpp  Plane3D.hpp  Ray.hpp  RenderTarget.hpp  Scene.hpp  Shader.hpp  Stream.hpp  Terrain.hpp  Texture.hpp  Transform.hpp  Tree.hpp  Triangle.hpp  Utils.hpp  Vertex.hpp
core/src/: Animation.cpp  Batch.cpp  Camera.cpp  Collision.cpp  Color.cpp  Component.cpp  Components.cpp  Device.cpp  Driver.cpp  Effects.cpp  Font.cpp  Frustum.cpp  GUI.cpp  GameObject.cpp  Image.cpp  Input.cpp  Load3DS.cpp  LoadOBJ.cpp  Math.cpp  Mesh.cpp  Node.cpp  Node3D.cpp  Object.cpp  Pixmap.cpp  Plane3D.cpp  Ray.cpp  RenderTarget.cpp  Scene.cpp  Shader.cpp  Stream.cpp  Terrain.cpp  Texture.cpp  Transform.cpp  Tree.cpp  Triangle.cpp  Utils.cpp  Vertex.cpp  pch.h  stb_image_write.h
csshadow/: CMakeLists.txt
csshadow/src/: main.cpp  shader.txt
deferred/: CMakeLists.txt
deferred/src/: main.cpp
effects/: CMakeLists.txt
effects/src/: main.cpp
exporter/: CMakeLists.txt
exporter/src/: AssimpLoader.cpp  AssimpLoader.hpp  MeshFormat.hpp  MeshWriter.cpp  MeshWriter.hpp  SimpleMesh.hpp  Stream.cpp  Stream.hpp  Types.hpp  main.cpp
main/: CMakeLists.txt
main/src/: main.cpp
rtrender/src/: main.cpp
samples/rtrender/: CMakeLists.txt
samples/template/: CMakeLists.txt
shadow/src/: main.cpp
sponza/: CMakeLists.txt
sponza/src/: main.cpp
terrain/: CMakeLists.txt
terrain/src/: main.cpp
test_gui/: CMakeLists.txt
test_gui/src/: main.cpp
test_stream/: CMakeLists.txt
test_stream/src/: main.cpp
testgui/: CMakeLists.txt
testgui/src/: main.cpp
water/: CMakeLists.txt
water/src/: main.cpp
(+3 files in other folders)
